# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Fixed some portrules that used shortport functions incorrectly
  and always returned true in dns-zone-transfer and
  ftp-proftpd-backdoor. [Jost Krieger]

o [Ndiff] Added support for prerule and postrule scripts. [David]

o [Ndiff] Fixed ndiff.dtd to include two elements that can be diffed:
  status and address. [Daniel Miller]

o [Ndiff] Fixed the ordering of hostscript-related elements in XML
  output. [Daniel Miller]

o [NSE] Fixed a bug in the nrpe-enum script that would make it run for
  every port (when it was selected, which it was not by default).
  Daniel Miller reported the bug. [Patrick]

o [NSE] Made it a controlled Lua stack trace instead of a fatal error
  when an NSE script sets a negative socket timeout. Vlatko Kosturjak
  reported the bug. [David]

o [NSE] Fixed a bug which caused some NSE scripts to fail, due to the
  absence of the NSE SCRIPT_NAME environment variable when the scripts
  are loaded. Michael Pattrick reported the problem. [Djalal]

o Fixed some inconsistencies in nmap-os-db reported by Xavier Sudre
  from netVigilance.

o [Zenmap] Worked around an error that caused the py2app bootstrap
  executable to be non-universal even when the rest of the application
  was universal. This prevented the binary .dmg from working on
  PowerPC. yxynaxen reported the problem. [David]

o [Ndiff] Fixed an output line that wasn't being redirected to a file
  when all other output was. [Daniel Miller]

o Updated IANA IP address space assignment list for random IP (-iR)
  generation.  This list now contains only various reserved blocks as
  IANA has handed out the final unallocated IPv4 addresses to the
  RIRs. [Kris]

Nmap 5.50 [2011-01-28]

o [Zenmap] Added a new script selection interface, allowing you to
  choose scripts and arguments from a list which includes descriptions
  of every available script. Just click the "Scripting" tab in the
  profile editor. [Kirubakaran]
